# mlp_v_kan

./: .gitignore  README.md  main.py  pyproject.toml
mlp/: MLP.py
notebooks/: kan_ex.ipynb
notebooks/model/: 0.0_state  0.1_cache_data  0.1_state  0.2_config.yml  0.2_state
src/: main.py
src/models/: kan.py  mlp.py
